making search options for content tables more aware of which searches are appropriate for which field data types. style fix for content tables so they can scroll horizontally if needed instead of stretching outside of parent element

--- a/app/static/css/corpora.css
+++ b/app/static/css/corpora.css
@@ -10064,6 +10064,13 @@ table.table {
   border-bottom: solid 4px #17BEBB;
 }
 
+.content-table {
+  display: block;
+  max-width: fit-content;
+  overflow-x: auto;
+  -ms-overflow-style: -ms-autohiding-scrollbar;
+}
+
 .corpora-content-cell {
   max-height: 100px;
   overflow: auto;
